
--Added retry for deadlock on chilling_houses in flush call.

--Added work-around for strange, rare issue of house maps missing from the map
  cache table at the end of a robbery only to show up in that table later
  (maybe from an edit that ends right before the robbery).

--Added retries to work around deadlocks in isolated queries at the tail end
  of endRobHouse.





Version 31a   2014-January-31

--Unix Source bundle update.

(Includes all Live Server Fixes listed below.)




Version 31  Live Server Fixes

--Added a bunch of stats to the admin view.

--Added current-active-user count stat harvesting to every flush call.

--Fixed a deadlock in ping_house by retrying after a deadlock.

--Added a 5-minute delay before a new house goes on the house list to thwart
  the prevalence of farming neglected starter homes in the 2000-bracket on the
  house list.

--Added tracking of total daily connections stats.

--Fixed server source so that it can be installed on a fresh database without
  throwing database errors (thanks Mike H).

--Fixed deprecated call-by-reference warnings (thanks Mike H).





Version 31   2014-January-28

--Added a custom reason-for-shutdown message sent by the server that the client
  displays.

--Added pending shutdown warnings to the ping and self-test protocols.  The
  client displays a dismissable message when it receives a shutdown warning
  from the server.

--Client now retries eternally until it hears back from server (instead of
  stopping after a hard connection error occurs).  A network outtage or server
  downtime will no longer result in your death, assuming that the outtage is
  short enough that you don't get timed out server-side.

--Added a grace-period switch on the server that can be enabled after unplanned
  outtages to allow players delayed by the outtage to check in stale robberies
  and self tests without dying.

--Fixed eyedropper tool getting stuck on when ALT-tabbing.  On Windows, this